--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script src = "js/modrenizer.js"></script>
 <script src = "js/analytics.js"></script>
 <script src = "js/utils.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 
 
 <div class="container">
@@ -44,5 +45,8 @@
 <script src="js/barChart.js"></script>
 <script src="js/lineChart.js"></script>
 <script src="js/comboChart.js"></script>
+<script src="js/algorithmpie.js"></script>
+<script src="js/algorithmbar.js"></script>
+<script src="js/algorithmcombo.js"></script>
 </body>
 </html>
