- fixed scrolling for horizontal scrolling

--- a/index.html
+++ b/index.html
@@ -24,6 +24,45 @@
 
 <div class="container">
 
+
+<!--    <div class="chartWrapper">
+        <div class="chartAreaWrapper">
+            <div class="chartAreaWrapper2">
+                <canvas id="scrollableStacked"></canvas>
+            </div>
+        </div>
+
+        <canvas id="scrollableStacked2" height="300" width="0"></canvas>
+    </div>-->
+
+<!--
+    <div class="chartWrapper">
+      <div class="chartAreaWrapper">
+        <div class="chartAreaWrapper2">
+            <canvas id="myChart"></canvas>
+        </div>
+      </div>
+
+        <canvas id="myChartAxis" height="300" width="0"></canvas>
+    </div>
+-->
+
+
+       <div class="chartWrapper">
+      <div class="chartAreaWrapper">
+        <div class="chartAreaWrapper2">
+            <canvas id="mybarChart"></canvas>
+        </div>
+      </div>
+
+        <canvas id="mybarChartAxis" height="300" width="0"></canvas>
+    </div>
+
+
+
+
+
+
     <div class="container-chart">
         <canvas id="pieChart"></canvas>
     </div>
@@ -48,5 +87,7 @@
 <script src="js/algorithmpie.js"></script>
 <script src="js/algorithmbar.js"></script>
 <script src="js/algorithmcombo.js"></script>
+<!--<script src="js/scrollableChart.js"></script>-->
+<!--<script src="js/ScrollableStackedChart.js"></script>-->
 </body>
 </html>
