Changes For Charts

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
       </div>
 
-        <canvas id="mybarChartAxis" height="300" width="0"></canvas>
+        <canvas id="mybarChartAxis"></canvas>
     </div>
 
 
